task 1 - fixes nos z-index

--- a/src/components/workouts/WorkoutDetails.module.css
+++ b/src/components/workouts/WorkoutDetails.module.css
@@ -19,6 +19,7 @@
   display: flex;
   color: var(--neutralLight);
   font-size: 15px;
+  z-index: 9;
 }
 
 .start {
@@ -89,7 +90,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
-  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  z-index: 900; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
 }
 
