--- a/src/pages/AddEditWorkout.module.css
+++ b/src/pages/AddEditWorkout.module.css
@@ -13,6 +13,7 @@
   display: flex;
   color: var(--neutralLight);
   font-size: 15px;
+  z-index: 9;
 }
 
 .add_exercise,
